fix overlapping in review-page

--- a/src/components/ReviewPage/ReviewInfo.css
+++ b/src/components/ReviewPage/ReviewInfo.css
@@ -43,7 +43,7 @@ a {
 
 .form-check {
     padding-top: 20px;
-    padding-left:10px;
+    padding-left:0px;
 }
 
 .form-check .form-check-input  {
